--- a/templates/results.html
+++ b/templates/results.html
@@ -127,7 +127,7 @@
             <div id="map" class="map-view"></div>
         </div>
         <div class="new-search-container">
-            <a href="{{ url_for('home') }}" class="btn btn-primary new-search-btn"><b>New Search</b></a>
+            <a href="{{ url_for('home', _anchor='search-form') }}" class="btn btn-primary new-search-btn"><b>New Search</b></a>
         </div>
     </main>
 
